--- a/_sass/theme/_header.scss
+++ b/_sass/theme/_header.scss
@@ -18,6 +18,7 @@
 		position: relative;
 		display: inline-block;
 		padding-left: 18px;
+		margin-left: -4px;
 		&:before {
 			content: "";
 			display: block;
@@ -49,6 +50,7 @@
 		}
 		@include sm {
 			font-size: 13px;
+			margin-left: 0;
 			&:hover {
 				color: #222;
 			}
